--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ server.port=8080
 #spring.h2.console.path=/h2-console
 #spring.jpa.open-in-view=false
 
-spring.datasource.url=jdbc:mariadb://localhost:3306/uasz_db
+spring.datasource.url=jdbc:mariadb://localhost:3306/gestion_db
 spring.datasource.username=root
 spring.datasource.password=77781234
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
